@@ -7,6 +7,18 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  09 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/dcache.py, 
+  pym/orig_dict_cache.py, portage.py:  Removed listdir optional arg
+  EmptyOnError- wasn't abided by for non-recursive calls, for recursive calls
+  it only returned None when recursing.  Optional arg wasn't used, so it's gone.
+  Moved followSymlink logic into listdir, so that orig_dict_cache is strictly
+  a caching mechanism.  Added dcache, a symlink aware list based cache class.
+  dcache needs work, but reduces listdir($IMAGE_OF_XORG,recursive=1) from 
+  spending hours to return (on my machine), to around a minute.
+  Made dcache active *only* for treewalk currently, since that's the 
+  instance where the original cache implementation's lack of symlink-awareness
+  made things bad.
+
   09 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/ebuild.py: make
   prelink + confcache play nice (calc_prelink=1).
 
